--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/src/index.js",
-    "dev": "nodemon src/index.ts",
+    "start": "node dist/src/server.js",
+    "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -18,7 +18,11 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.25.0",
     "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   }
 }
