--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/src/server.js",
+    "test": "jest --passWithNoTests",
+    "test:watch": "yarn test --watch",
     "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
@@ -16,14 +18,18 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.19",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.2",
     "@types/node": "^18.11.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
