--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-tests",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "start": "node dist/src/server.js",
     "test": "jest --passWithNoTests",
